<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filename" />

                <TextView
                    android:id="@+id/orderId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id" />

                <TextView
                    android:id="@+id/orderTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_time" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/colourMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/colour_mode" />

                <TextView
                    android:id="@+id/paperSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paper_size" />

                <TextView
                    android:id="@+id/totalCopies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_copies_to_print" />

                <TextView
                    android:id="@+id/totalPaymentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_payment" />

                <TextView
                    android:id="@+id/paymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/collectTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/collect_date"
                    tools:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/collect"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/collect"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_order"
                    android:textColor="@color/secondaryTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </androidx.cardview.widget.CardView>

</LinearLayout>