<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/makePaymentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"
        android:scrollIndicators="none"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/makePaymentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingRight="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/makePaymentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/make_payment"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/colourModeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/colourModeTitle"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="@string/colour_mode"
                    android:textColor="@color/secondaryTextColor" />

                <RadioGroup
                    android:id="@+id/colourModeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkedButton="@id/blackAndWhiteMode"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/blackAndWhiteMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/black_and_white"
                        android:textColor="@color/secondaryTextColor"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/colouredMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coloured"
                        android:textColor="@color/secondaryTextColor" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paperSizeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/paperSizeTitle"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:importantForAutofill="no"
                    android:text="@string/paper_size"
                    android:textColor="@color/secondaryTextColor"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioGroup
                    android:id="@+id/paperSizeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkedButton="@id/paperSize3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/paperSize1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/b5"
                        android:textColor="@color/secondaryTextColor"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/paperSize2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a5"
                        android:textColor="@color/secondaryTextColor" />

                    <RadioButton
                        android:id="@+id/paperSize3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a4"
                        android:textColor="@color/secondaryTextColor" />

                    <RadioButton
                        android:id="@+id/paperSize4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a3"
                        android:textColor="@color/secondaryTextColor" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/totalCopiesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalCopiesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:text="@string/total_copies_to_print"
                    android:textColor="@color/secondaryTextColor" />

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id="@+id/totalCopiesNumberButton"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    app:backGroundColor="@color/primaryColor"
                    app:textColor="@color/primaryTextColor" />

            </LinearLayout>

            <TextView
                android:id="@+id/pricingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pricing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalPaymentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:layout_weight="1"
                    android:text="@string/total_payment"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rm_0_00"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="20sp" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/paymentMethodTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/payment_method"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cashOnDeliveryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:drawableEnd="@drawable/ic_baseline_attach_money_24"
                    android:text="@string/cash_on_delivery"
                    android:textColor="@color/primaryTextColor" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="220dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/cimbBankButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/cimb_bank"
                    android:textColor="@color/primaryTextColor" />

                <Button
                    android:id="@+id/publicBankButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/public_bank"
                    android:textColor="@color/primaryTextColor" />

                <Button
                    android:id="@+id/maybankButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/maybank"
                    android:textColor="@color/primaryTextColor" />

                <Button
                    android:id="@+id/affinBankButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/affin_bank" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>