<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAccount">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="50dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/accountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_title"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstnameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lastnameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deleteAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete_account"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>