<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHome">

    <ScrollView
        android:id="@+id/homeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:paddingStart="15dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingRight="5dp"
        android:scrollIndicators="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/homeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fast_prints_logo_alt"
                android:src="@drawable/fast_prints_logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/aboutUsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textAlignment="viewStart"
                android:textColor="@color/secondaryTextColor" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/servicesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/services_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services"
                android:textColor="@color/secondaryTextColor" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/contactUsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/businessHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_hour"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/secondaryTextColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autoLink="phone"
                    android:linksClickable="true"
                    android:minHeight="48dp"
                    android:text="@string/phoneNumber"
                    android:textColor="#0277BD"
                    android:textColorLink="@color/primaryColor"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:linksClickable="true"
                    android:minHeight="48dp"
                    android:text="@string/email"
                    android:textColorLink="#03A9F4"
                    tools:ignore="TextContrastCheck" />

                <androidx.legacy.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <androidx.legacy.widget.Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>